--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="header">
         <img src="logo2.png" alt="">
+        <button class="menu-toggle">☰</button>
         <ul class="header-menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">Shop</a></li>
@@ -64,7 +65,16 @@
             </div>
         </div>
 
-   
+      <script>
+    document.addEventListener('DOMContentLoaded', function() {
+    const menuToggle = document.querySelector('.menu-toggle');
+    const headerMenu = document.querySelector('.header-menu');
+
+    menuToggle.addEventListener('click', function() {
+        headerMenu.classList.toggle('show');
+    });
+});
+   </script>
 
 
 
